# svg2ooxml

./: .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.orbstack  Emf embedding example.pptx  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-CONTENT  Procfile  README.md  README.pypi.md  TESTING_OAUTH.md  cannotdisplay.pptx  cloudbuild-hosting.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  debug.sh  demo_tiers_composite_filters.pptx  firebase.json  firestore.indexes.json  firestore.rules  main.py  pyproject.toml  requirements-api.txt  requirements-core.txt  requirements-dev.txt  requirements-full.txt  requirements-render.txt  requirements.txt  requirements.txt.new  run.Dockerfile  (+5 more)
.firebase/: hosting.cHVibGlj.cache
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.tasks/: firebase-auth-integration.md
.tmp_compare/: simple_rect_generated.pptx
cli/: __init__.py  main.py  run_batch_worker.py  run_worker.py
docs/: ARCHITECTURE_SKELETON.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DRIVE_SETUP.md  FINAL_DEPLOYMENT_CHECKLIST.md  FIREBASE_STRIPE_INTEGRATION_PLAN.md  FONT_DATA_FLOW_VISUAL.txt  FONT_EMBEDDING_ANALYSIS.md  FONT_EMBEDDING_EXPLORATION_INDEX.md  FONT_INJECTION_QUICK_REFERENCE.md  GITHUB_DEPLOYMENT_SETUP.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  QUICK_START_STAGING.md  README.md  REQUIREMENTS_AND_TESTS_REVIEW.md  ROADMAP.md  SPEED_AND_SECURITY_AUDIT.md  STRIPE_IMPLEMENTATION_STATUS.md  TESTING_SETUP.md  filter_mimic_priority.md  firestore-schema.md  legacyport.md  licensing.md  local-api-testing.md  maintainability.md  migration_core_plan.md  porting.md  resvg.md  resvg_migration_plan.md  structure.md  svg2pptx_component_map.md  testing.md
examples/: render_tiers_demo.py
figma-plugin/: QUICKSTART.md  README.md  UI-V2-README.md  code.js  manifest.json  test-ui.html  token-refresh.js  ui-minimal.js  ui-v2.html  ui.html  ui.js
infrastructure/: cloudbuild-hosting.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  database.rules.json  firebase.json  gcloud_adc_remote_bootstrap.sh
public/: auth-status.html  auth.html  index.html  oauth-callback.html  oauth-direct.html  payment-cancel.html  payment-success.html  privacy.html  terms.html
scripts/: README-firebase-setup.md  configure-oauth-credentials.sh  deploy-website.sh  grant-unlimited-exports.sh  set-unlimited-quota.sh  setup-cloud-tasks.sh  setup-firebase-auth-gcloud-only.sh  setup-firebase-auth.sh  (+3 more)
(+2026 files in other folders)
