[build-system]
requires = [ "setuptools>=68", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "svg2ooxml"
version = "0.1.0"
description = "SVG to Office Open XML conversion toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "tinycss2>=1.2", "click>=8.1", "lxml>=4.9.0",]
[[project.authors]]
name = "SVG2OOXML Contributors"

[project.license]
text = "TBD"

[project.optional-dependencies]
dev = [ "black>=24.0", "isort>=5.12", "mypy>=1.8", "pre-commit>=3.5", "pytest>=7.4", "ruff>=0.4.0",]
accel = [ "numpy>=1.24",]
color = [ "numpy>=1.24", "colorspacious>=1.1.0", "Pillow>=10.0",]
render = [ "skia-python>=87.5", "Pillow>=10.0", "numpy>=1.24",]
slides = [ "python-pptx>=0.6.23", "cryptography>=41.0",]
api = [ "fastapi>=0.109.0", "uvicorn[standard]>=0.27.0", "pydantic>=2.5.3", "python-multipart>=0.0.6", "firebase-admin>=6.5.0",]
cloud = [ "google-cloud-firestore>=2.14.0", "google-cloud-storage>=2.14.0", "google-cloud-iam>=2.14.0", "google-cloud-tasks>=2.16.0", "google-api-python-client>=2.130", "google-auth>=2.26", "google-auth-oauthlib>=1.2.0",]
visual-testing = [ "scikit-image>=0.21.0", "Pillow>=10.0.0",]

[tool.black]
line-length = 88
target-version = [ "py310",]

[tool.isort]
profile = "black"
line_length = 88
src_paths = [ "src", "tests",]

[tool.ruff]
target-version = "py310"
line-length = 88
src = [ "src", "tests",]
exclude = [ "venv",]

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "UP", "B",]
ignore = [ "B008", "E203", "E501", "N802", "N803", "N806", "N812",]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true
namespace_packages = false
plugins = []
mypy_path = [ "src",]
disallow_untyped_defs = false
follow_imports = "normal"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --maxfail=1"
testpaths = [
  "tests",
]
markers = [
  "unit: fast checks that should run in the default developer loop",
  "integration: cross-module tests that touch IO or heavier dependencies",
  "visual: visual regression tests that rely on PPTX rendering",
  "slow: long-running tests gated from default workflows",
  "smoke: lightweight end-to-end smoke tests hitting deployed services",
  "requires_network: tests that reach external network resources",
]

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
